--- a/package.json
+++ b/package.json
@@ -17,7 +17,22 @@
   },
   "homepage": "https://github.com/apapacy/react-blank#readme",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "handlebars": "^4.0.5",
+    "handlebars-loader": "^1.1.4",
+    "json-loader": "^0.5.4",
+    "jsx-loader": "^0.13.2",
+    "react": "^0.14.7",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14"
   }
 }
