--- a/package.json
+++ b/package.json
@@ -24,15 +24,24 @@
     "babel-preset-react": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
+    "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "gulp": "^3.9.1",
+    "gulp-webpack": "^1.5.0",
     "handlebars": "^4.0.5",
     "handlebars-loader": "^1.1.4",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
     "react": "^0.14.7",
+    "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "jsx": "^0.9.89",
+    "jsx-loader": "^0.13.2"
   }
 }
