--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
+    "browser-sync": "^2.11.1",
     "css-loader": "^0.23.1",
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
