--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./bin/www --harmony  --ext '.js|.css|.html|.twig|.sass|.coffee|.jsx'",
+    "babel-jsx": "babel --presets react src --watch --out-dir public/assets",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,15 +36,36 @@
     "handlebars-loader": "^1.1.4",
     "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
+    "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "coffee-script": "^1.10.0",
+    "cookie-parser": "^1.4.1",
+    "express": "^4.13.4",
+    "hbs": "^4.0.0",
     "jsx": "^0.9.89",
-    "jsx-loader": "^0.13.2"
+    "jsx-loader": "^0.13.2",
+    "lodash": "^4.5.1",
+    "morgan": "^1.7.0",
+    "node-jsx": "^0.13.3",
+    "node-sass-middleware": "^0.9.7",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
+    "react-dom": "^0.14.7",
+    "soap": "^0.13.0",
+    "traceur": "0.0.102",
+    "twig": "^0.8.8",
+    "webpack-stream": "^3.1.0",
+    "xml2js": "^0.4.16"
   }
 }
