--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
     "soap": "^0.13.0",
     "traceur": "0.0.102",
     "twig": "^0.8.8",
